--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>To-Do-List</title>
 </head>
 <body>
   <%- include('./partials/_navbar.ejs') %>
-  <p><a href="/vip-lounge">Get into the VIP Users Only lounge!</a></p>
+  <h1>To-Do-List</h1>
+  <p>A track your tasks</p>
 </body>
 </html>
