--- a/views/lists/category/new.ejs
+++ b/views/lists/category/new.ejs
@@ -13,7 +13,7 @@
     <form action="/lists" method="POST">
 
         <label for="title">Title:</label>
-        <input type="text" name="title" id="title"/>
+        <input type="text" name="title" id="title" required/>
 
     
    
