--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,7 +1,7 @@
 
 <nav>
   <% if (user) { %>
-  <a href="/">Home</a>
+  <a href="/lists">Home</a>
   <a href="/auth/sign-out">Sign Out</a>
   <% } else { %>
   <a href="/auth/sign-up">Sign Up</a>
