add Delete and edit the listItem

--- a/views/lists/index.ejs
+++ b/views/lists/index.ejs
@@ -12,8 +12,10 @@
      <ul>
  <% lists.forEach(list => { %> 
   <li>
-   <a href="/lists/<%= list.id %>">   <%= list.title %>
- </a>    </li>
+   <a href="/lists/<%= list.id %>">   
+    <%= list.title %>
+ </a>   
+ </li>
  <% }) %>
  </ul>
   </body>
