--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign In</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+
   </head>
   <body>
-    <h1>Log in</h1>
-    <form action="/auth/sign-in" method="POST">
+    <%- include('../partials/_navbar') %>
+    <div class="signin-container">
+      <h1>Sign in</h1>
+      <form action="/auth/sign-in" method="POST">
       <label for="username">Username:</label>
       <input type="text" name="username" id="username" />
 
@@ -16,5 +20,6 @@
 
       <button type="submit">Sign in</button>
     </form>
+    </div>
   </body>
 </html>
