--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
-    <h1>Create a new account!</h1>
-    <form action="/auth/sign-up" method="POST">
+     <%- include('../partials/_navbar') %>
+    <div class="signup-container">
+      <h1>Create a new account!</h1>
+      <form action="/auth/sign-up" method="POST">
       <label for="username">Username:</label>
       <input type="text" name="username" id="username" />
       <label for="password">Password:</label>
@@ -16,5 +19,8 @@
       <input type="password" name="confirmPassword" id="confirmPassword" />
       <button type="submit">Sign up</button>
     </form>
+    </div>
+    
+    
   </body>
 </html>
