--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,10 +1,32 @@
-
-<nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NavBar</title>
+  <link rel="stylesheet" href="/stylesheets/partials.css" />
+</head>
+<body>
+  <nav>
   <% if (user) { %>
-  <a href="/lists">Home</a>
-  <a href="/auth/sign-out">Sign Out</a>
+    <div class="navbar">
+      <h1 id="nav-header">To-DO-Lists</h1>
+      <div class="nav-links">
+        <a class="authlink" href="/lists">Home</a>
+        <a class="authlink" href="/auth/sign-out">Sign Out</a>
+      </div>
+    </div>
   <% } else { %>
-  <a href="/auth/sign-up">Sign Up</a>
-  <a href="/auth/sign-in">Sign In</a>
+    <div class="navbar">
+      <h1 id="nav-header">To-Do-Lists</h1>
+      <div class="nav-links">
+        <a class="authlink" href="/auth/sign-up">Sign Up</a>
+        <a class="authlink" href="/auth/sign-in">Sign In</a>
+      </div>
+    </div>
   <% } %>
 </nav>
+
+</body>
+</html>
+
