--- a/views/lists/category/edit.ejs
+++ b/views/lists/category/edit.ejs
@@ -8,16 +8,21 @@
  </head>
  <body>
  <%- include('../../partials/_navbar.ejs') %>
- <h1>Edit <%= list.title %></h1>
-
-     <form action="/lists/<%= list._id %>?_method=PUT" method="POST">
+ <div class="edit-body">
+   <h1>Edit <%= list.title %></h1>
+   <form action="/lists/<%= list._id %>?_method=PUT" method="POST">
 
    <label for="title">Title:</label>
  <input type="text" name="title" id="title" value="<%= list.title %>"/>
+ <button type="submit">Save Changes</button>
+ </div>
+
+
+    
 
  
 
- <button type="submit">Save Changes</button>
+ 
 </form>
  </body>
 </html>
