--- a/views/lists/listItem/edit.ejs
+++ b/views/lists/listItem/edit.ejs
@@ -8,12 +8,14 @@
 </head>
 <body>
  <h1>Edit <%= listItem.title %></h1>
-    
+  <div class="edit-body">
     <form action="/lists/<%= list._id %>/items/<%= listItem._id %>?_method=PUT" method="POST">
         
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" value="<%= listItem.title %>" required>
         
+         <label for="notes">Notes:</label>
+        <textarea id="notes" name="notes"><%= listItem.notes %></textarea>
         
         <label for="date">Date:</label>
         <input type="date" id="date" name="date" value="<%= listItem.date %>">
@@ -21,9 +23,6 @@
         <label for="time">Time:</label>
         <input type="time" name="time" id="time"/>
 
-        <label for="notes">Notes:</label>
-        <textarea id="notes" name="notes"><%= listItem.notes %></textarea>
-        
         <label for="status">Status:</label>
     <select id="status" name="status">
     <option value="Upcoming">Upcoming</option>
@@ -31,8 +30,12 @@
     <option value="Completed">Completed</option>
   </select>
 
-        <button type="submit">Save Changes</button> </form>
+        <button type="submit">Save Changes</button> 
     
-    <a href="/lists/<%= list._id %>/items/<%= listItem._id %>">Cancel and Back to Item</a>
+    <a class="back-link" href="/lists/<%= list._id %>/items/<%= listItem._id %>">Back to ListItem Details</a>
+    </form>
+  </div>
+    
+    
 </body>
 </html>
