--- a/views/lists/listItem/new.ejs
+++ b/views/lists/listItem/new.ejs
@@ -10,8 +10,8 @@
   <body>
     <%- include('../../partials/_navbar.ejs') %>
     <h1>Add a New List to: <%= list.title %></h1>
-
-    <form action="/lists/<%= list._id %>/addItem" method="POST">
+    <div class="new-body">
+        <form action="/lists/<%= list._id %>/addItem" method="POST">
 
         <label for="title">Title:</label>
         <input type="text" name="title" id="title" required/>
@@ -33,7 +33,12 @@
   </select>
    
   <button type="submit">Add Lists</button>
+
+  <a class="back-link" href="/lists/<%= list._id %>">Back to ListItem</a>
    
 </form>
+    </div>
+
+  
   </body>
 </html>
