--- a/views/lists/listItem/show.ejs
+++ b/views/lists/listItem/show.ejs
@@ -4,31 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List Item: <%= listItem.title %></title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/show.css">
 </head>
 <body>
     <%- include('../../partials/_navbar.ejs') %>
-   
+    
     <h1><%= listItem.title %> Details</h1>
-    <p><strong>Date:</strong> <%= listItem.date %></p>
-    <p><strong>Time:</strong> <%= listItem.time %></p>
-    <p><strong>Status:</strong> <%= listItem.status %></p>
-   
-      
+    
+    <div class="item-details-card">
+        <p><strong>Date:</strong> <%= listItem.date %></p>
+        <p><strong>Time:</strong> <%= listItem.time %></p>
+        <p><strong>Status:</strong> <%= listItem.status %></p>
+        
+        <hr>
+        
+        <p><strong>Notes:</strong></p>
+        <div class="item-notes">
+            <%= listItem.notes %>
+        </div>
+    </div>
+    
+    <div class="action-button-group">
+        
+        <form action="/lists/<%= list._id %>/items/<%= listItem._id %>/edit" method="get">
+            <button class="edit-item-button" type="submit">Edit this List Item</button> 
+        </form>
 
-    <hr>
-    <p><strong>Notes:</strong>
-      <br>
-       <%= listItem.notes %></p>
+        <form action="/lists/<%= list._id %>/items/<%= listItem._id %>?_method=DELETE" method="POST">
+            <button class="delete-item-button" type="submit">Delete this List Item</button>
+        </form>
+        
+    </div>
 
-       <form action="/lists/<%= list._id %>/items/<%= listItem._id %>/edit" method="get">
-    <button type="submit">Edit this List Item</button> 
-    </form>
+    <a class="back-link" href="/lists/<%= list._id %>">Back to Category</a>
 
-      <form action="/lists/<%= list._id %>/items/<%= listItem._id %>?_method=DELETE" method="POST">
-  <button type="submit">Delete this List Item</button>
-  </form>
-
-        <a href="/lists/<%= list._id %>">Back to Category</a>
 </body>
 </html>
