--- a/views/lists/category/show.ejs
+++ b/views/lists/category/show.ejs
@@ -10,6 +10,7 @@
     <%- include('../../partials/_navbar.ejs') %>
     
     <h1><%= list.title %> Category </h1>
+     <div class="conteiner">
     
     <div class="action-buttons-container">
       
@@ -44,6 +45,6 @@
     <% } else { %>
       <p>No items have been added to this list yet.</p>
     <% } %>
-
+      </div>
   </body>
 </html>
