Finish To-Do-Lists

--- a/views/lists/listItem/new.ejs
+++ b/views/lists/listItem/new.ejs
@@ -17,7 +17,7 @@
         <input type="text" name="title" id="title" required/>
 
         <label for="notes">Notes:</label>
-        <textarea type="text" name="notes" id="notes" required> </textarea>
+        <textarea type="text" name="notes" id="notes" required></textarea>
 
         <label for="date">Date:</label>
         <input type="date" name="date" id="date"/>
@@ -26,7 +26,7 @@
         <input type="time" name="time" id="time"/>
 
     <label for="status">Status:</label>
-    <select id="status" name="status">
+    <select id="status" name="status" required>
     <option value="Upcoming">Upcoming</option>
     <option value="Current">Current</option>
     <option value="Completed">Completed</option>
